
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct script_ctx {int client; } ;
typedef int lua_State ;


 int MPV_FORMAT_OSD_STRING ;
 int MPV_FORMAT_STRING ;
 struct script_ctx* get_ctx (int *) ;
 char* luaL_checkstring (int *,int) ;
 scalar_t__ lua_isnoneornil (int *,int) ;
 int lua_pushstring (int *,char*) ;
 int lua_pushvalue (int *,int) ;
 scalar_t__ lua_tointeger (int *,int ) ;
 int lua_upvalueindex (int) ;
 char* mpv_error_string (int) ;
 int mpv_get_property (int ,char const*,int,char**) ;
 int talloc_free (char*) ;

__attribute__((used)) static int script_get_property(lua_State *L)
{
    struct script_ctx *ctx = get_ctx(L);
    const char *name = luaL_checkstring(L, 1);
    int type = lua_tointeger(L, lua_upvalueindex(1))
               ? MPV_FORMAT_OSD_STRING : MPV_FORMAT_STRING;

    char *result = ((void*)0);
    int err = mpv_get_property(ctx->client, name, type, &result);
    if (err >= 0) {
        lua_pushstring(L, result);
        talloc_free(result);
        return 1;
    } else {
        if (lua_isnoneornil(L, 2) && type == MPV_FORMAT_OSD_STRING) {
            lua_pushstring(L, "");
        } else {
            lua_pushvalue(L, 2);
        }
        lua_pushstring(L, mpv_error_string(err));
        return 2;
    }
}
